--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "input-otp": "^1.1.0",
+    "lucide-react": "^0.446.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
@@ -33,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
