--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.39.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.9.0",
     "input-otp": "^1.1.0",
     "lucide-react": "^0.446.0",
     "next": "14.1.3",
